fix: transparent on safari should be clear

--- a/styles/components.css
+++ b/styles/components.css
@@ -34,6 +34,22 @@
     content: none;
   }
 
+  .white-to-transparent {
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  }
+
+  .transparent-to-white {
+    background: linear-gradient(
+      to top,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  }
+
   .responsive-skills {
     display: grid;
     grid-gap: 20px;
